// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmLiAnyTransaction shows bank transactions 1`] = `
<div
  class="tm-li-tx"
>
  <div
    class="tm-li-tx__icon"
  >
    <img
      src="~assets/cosmos-logo.png"
      style="border-color: #25293f;"
    />
  </div>
  <div
    class="tm-li-tx__content"
  >
    <h1
      class="tm-li-tx__content__caption"
    >
      <div>
        Sent 
        <b>
          1234
        </b>
        <span>
           JBCOINS
        </span>
      </div>
    </h1>
    <div
      class="tm-li-tx__content__information"
    >
      <div
        class="tm-li-tx__content__information__details"
      >
        <span>
          To tb1d4u5zerywfjhxuc9nudvw
        </span>
      </div>
      <div
        class="tm-li-tx__content__information__block"
      >
        <a
          href="https://explorecosmos.network/blocks/3436"
        >
          Block #3436 
        </a>
        @ 1:00
      </div>
    </div>
  </div>
</div>
`;

exports[`TmLiAnyTransaction shows stake transactions 1`] = `
<div
  class="tm-li-tx"
>
  <div
    class="tm-li-tx__icon"
  >
    <img
      src="~assets/cosmos-logo.png"
      style="border-color: #512584;"
    />
  </div>
  <div
    class="tm-li-tx__content"
  >
    <h1
      class="tm-li-tx__content__caption"
    >
      <div>
        Delegated 
        <b>
          4200
        </b>
        <span>
           STEAK
        </span>
      </div>
    </h1>
    <div
      class="tm-li-tx__content__information"
    >
      <div
        class="tm-li-tx__content__information__details"
      >
        <div>
           To 
          <a
            href="/cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          >
            cool validator
          </a>
        </div>
      </div>
      <div
        class="tm-li-tx__content__information__block"
      >
        <a
          href="https://explorecosmos.network/blocks/566"
        >
          Block #566 
        </a>
        @ 1:00
      </div>
    </div>
  </div>
</div>
`;

exports[`TmLiAnyTransaction shows unknown transactions 1`] = `
<div
  class="tm-li-tx"
>
  <div
    class="tm-li-tx__icon"
  >
    <img
      src="~assets/cosmos-logo.png"
    />
  </div>
  <div
    class="tm-li-tx__content"
  >
    <h1
      class="tm-li-tx__content__caption"
    >
      <span>
        Unknown Transaction Type
      </span>
    </h1>
    <div
      class="tm-li-tx__content__information"
    >
      <div
        class="tm-li-tx__content__information__details"
      />
      <div
        class="tm-li-tx__content__information__block"
      >
        <a
          href="https://explorecosmos.network/blocks/3436"
        >
          Block #3436 
        </a>
        @ 1:00
      </div>
    </div>
  </div>
</div>
`;
